--- a/pom.xml
+++ b/pom.xml
@@ -17,15 +17,15 @@
 <!--            <artifactId>asm</artifactId>-->
 <!--            <version>9.1</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.javassist</groupId>
-            <artifactId>javassist</artifactId>
-            <version>3.28.0-GA</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.javassist</groupId>-->
+<!--            <artifactId>javassist</artifactId>-->
+<!--            <version>3.28.0-GA</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.11.8</version>
+            <version>1.11.12</version>
         </dependency>
 
     </dependencies>
